# Haskell-Calculator

./: BasicDerivatives.html  Recenzja.txt  calculator.cabal
.stack-work/install/x86_64-linux/lts-7.15/8.0.1/flag-cache/: calculator-0.1.0.0-8Tet1wOxGuGSNWb8A2YaZ
.stack-work/install/x86_64-linux/lts-7.15/8.0.1/lib/x86_64-linux-ghc-8.0.1/calculator-0.1.0.0-8Tet1wOxGuGSNWb8A2YaZ/: BasicDerivatives.dyn_hi  Calculator.dyn_hi  Calculator.hi  ParsingFunctions.dyn_hi  ParsingFunctions.hi
.stack-work/install/x86_64-linux/lts-7.15/8.0.1/pkgdb/: calculator-0.1.0.0-8Tet1wOxGuGSNWb8A2YaZ.conf  package.cache
app/: Main.hs
documentation/: BasicDerivatives.html  Calculator.html  Main.html  ParsingFunctions.html  doc-index.html  index-frames.html  index.html  mini_BasicDerivatives.html  mini_Calculator.html  mini_Main.html  mini_ParsingFunctions.html
src/: BasicDerivatives.hs  Calculator.hs  ParsingFunctions.hs
test/: HUnit.hs  MainTest.hs  QuickCheck.hs
