name:                calculator
version:             0.1.0.0
synopsis:            Calculator of derivatives
description:         Please see README.md
homepage:            https://github.com/githubuser/calculator#readme
license:             BSD3
license-file:        LICENSE
author:              Karol Bartyzel
maintainer:          karolbartyzel@interia.pl
copyright:           2017 Karol Bartyzel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BasicDerivatives, Calculator, ParsingFunctions
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , calculator
  default-language:    Haskell2010

test-suite calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , calculator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chudy1997/calculator
